CLang build warning in CheckedPtr.h https://bugs.webkit.org/show_bug.cgi?id=231672

Patch by Philippe Normand <pnormand@igalia.com> on 2021-10-13
Reviewed by Alex Christensen.

Assert on the wrapped pointer. Asserting on `this` always results to true, defeating the
purpose of the ASSERT.

* wtf/CheckedPtr.h:
(WTF::CheckedPtr::operator* const):
(WTF::CheckedPtr::operator*):

Canonical link: https://commits.webkit.org/242920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284092 268f45cc-cd09-0410-ab3c-d52691b4dbfc